syntax = "proto3";

package calculator;
option go_package = "/calculator/";

service Calculator {
  rpc Add (AddRequest) returns (AddResponse);
  rpc CallOtherAdd (AddRequest) returns (AddResponse);
  rpc Subtract (SubtractRequest) returns (SubtractResponse);
  rpc CallOtherSubtract (SubtractRequest) returns (SubtractResponse);
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
  string forward = 3;
}

message AddResponse {
  int32 result = 1;
}

message SubtractRequest {
  int32 a = 1;
  int32 b = 2;
  string forward = 3;
}

message SubtractResponse {
  int32 result = 1;
}
